finalize ML capstone project

--- a/notebooks/03_classification_model.ipynb
+++ b/notebooks/03_classification_model.ipynb
@@ -14,11 +14,13 @@
     "\n",
     "**Binned Target Variable:** ['target_category'] --- --- \n",
     "\n",
-    "    There will be two categories of crop yield\n",
+    "    There will be three categories of crop yield\n",
     "\n",
-    "    low: <= 17 t/ha \n",
+    "    Low: <= 10 t/ha \n",
+    "\n",
+    "    Medium: 10 - 20 t/ha\n",
     "    \n",
-    "    high: > 17 t/ha\n",
+    "    High: > 20 t/ha\n",
     "\n",
     "**Checkpoint 4 Due:** Feb 22\n",
     "\n",
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +334,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +398,7 @@
     "\n",
     "**Your approved binning strategy:**\n",
     "\n",
-    "- **Number of categories:** 2\n",
+    "- **Number of categories:** 3\n",
     "- **Category names:** [Low, Medium, High]\n",
     "- **Thresholds:**\n",
     "\n",
@@ -425,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1105,13 +1107,13 @@
     "\n",
     "**Your interpretation:**\n",
     "\n",
-    "1. The model performed reasonably well with 78% test accuracy and F1 Score ~ 0.79. However, the performance is uneven. It performed much better on the \"low\" category than the \"high\" category.\n",
+    "1. The model performed reasonably well with 86% test accuracy and F1 Score ~ 0.86. However, the performance is uneven. It performed much better on the \"High\" and \"Low\" categories but suffered when trying to predict \"Medium\" category.\n",
     "\n",
-    "2. **Easiest**: category **Low** --- **Hardest**: category **High**\n",
+    "2. **Easiest**: category **High** --- **Hardest**: category **Medium**\n",
     "\n",
-    "3. The model frequently missed **High** yield cases. It produced 162 false negatives (should be **High**, but predicted **Low**). Resulting a low recall (51%) of the **High** category. It also flagged some **Low** as **High** (203 false positives). But the input was imbalanced, there are much more true **Low** cases than true **High** cases, hence the recall of the **Low** category was 85%, which is pretty good.\n",
+    "3. The model frequently missed **Medium** yield cases. It produced 98 false negatives (should be **Medium**, but predicted **Low**). It also flagged 131 fields to **Low** while the actual is **Medium**. But the input was imbalanced, there are much more true **Low** cases than true **High** and **Medium** cases, hence the baseline model is good but not balanced across classes.\n",
     "\n",
-    "4. With the train accuracy at 81.1% and test accuracy at 78.2%, we did observe some slight overfitting."
+    "4. With the train accuracy at 87% and test accuracy at 86%, we did not onserve overfitting."
    ]
   },
   {
@@ -1125,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1197,7 @@
        "2    Gradient Boosting          0.858914  0.004299"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,9 +1241,9 @@
     "**Your interpretation:**\n",
     "\n",
     "\n",
-    "1. All three models perform very similarly (~80% accuracy), indicating stable performance and no strong advantage from one model to another. Results suggest the models generalize consistently across different data splits.\n",
+    "1. All three models perform very similarly (~86% accuracy), indicating stable performance and no strong advantage from one model to another. Results suggest the models generalize consistently across different data splits.\n",
     "\n",
-    "2. Gradient Boosting is most consistent (lowest CV std ≈ 0.0067), meaning its performance varies the least across folds.\n",
+    "2. Gradient Boosting is most consistent (lowest CV std ≈ 0.004), meaning its performance varies the least across folds.\n",
     "\n",
     "3. There is no significant ranking change from the single train/test split."
    ]
@@ -1255,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1570,7 @@
        "3                0.8240             0.8273         0.8253  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1679,11 +1681,11 @@
     "\n",
     "**Your justification:**\n",
     "\n",
-    "1. We selected Gradient Boosting for it's test accuracy (highest), weighted Recall (highest) and F1 performance (F1_score > 0.8, second highest).\n",
+    "1. We selected LogisticRegression model for it's test accuracy (highest), weighted Recall (highest) and F1 performance (F1_score ~ 0.86, highest).\n",
     "\n",
-    "2. Even though Training Accuracy ~ 1.0 and Testing Accuracy ~ 0.8, we worry less about overfitting in Gradient Boosting models as they generalize better due to sequential error correction.\n",
+    "2. Best model's training accuracy is 86.94% while test accuracy is 86.25%. There is no overfitting.\n",
     "\n",
-    "3. Gradient Boosting outperforms the baseline by improving accuracy, recall, and F1 score, making it a stronger predictive model overall.\n",
+    "3. Best model is the baseline model.\n",
     "\n",
     "4. We prioritized Test Accuracy and Recall when picking the best model. In real-world, crop yield estimates are used to manage food supply to combact hunger, optimize inputs such as fertilizers, irrigation, and pesticide application to increase profitability and reduce environmental impact. They are also used in economic planning, and devise trade policies. Therefore, it is important to be as accurate as possible (test accuracy) and miss as little as possible (recall)."
    ]
@@ -1697,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1811,20 +1813,35 @@
     "\n",
     "**Your analysis:**\n",
     "\n",
-    "1.  Model predicted 163 **High** yields correctly\n",
+    "1.  Model predicted 333 **High** yields correctly\n",
+    "\n",
+    "    Model predicted 270 **Medium** yields correctly\n",
     "   \n",
-    "    Model predicted 1179 **Low** yields correctly\n",
+    "    Model predicted 840 **Low** yields correctly\n",
     "\n",
-    "2.  Model mislabeled 171 **High** yields as **Low**\n",
+    "2.  Model mislabeled 131 **Medium** yields as **Low**\n",
     "\n",
-    "    Model mislabeled 161 **Low** yields as **High**\n",
+    "    Model mislabeled 99 **Low** yields as **Medium**\n",
     "\n",
-    "3. This model tends to underestimate yield. It makes sense because **High** yields are harder to predict because they depended on optimal conditions of multiple features (not just the more the better), such as right amount of fertilizer, right temperature, right soil moisture, etc. These can be hard to capture."
+    "3. Yes — this confusion matrix does make logical sense for a crop-yield classification problem.\n",
+    "Reasons are:\n",
+    "\n",
+    "(1) High yields often occur under clearly optimal conditions (ideal rainfall, soil quality, temperature, strong vegetation indices). Therefore model predicted **High** class at 100% accuracy.\n",
+    "\n",
+    "(2) Medium and low yields often overlap due to weather / water / soil conditions or timing of planting/harvest. These factors create gradual transitions, not sharp boundaries. Therefore misclassification near boundaries is expected. This matches what we see in the confusion matrix.\n",
+    "\n",
+    "(3) Model behavior matches agricultural reality. This confusion matrix suggests:\n",
+    "\n",
+    "✔ Model recognizes clear high-yield conditions\n",
+    "✔ Model captures most low-yield signals\n",
+    "✔ Model struggles with borderline cases\n",
+    "\n",
+    "This is typical and realistic for agronomic prediction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
