--- a/notebooks/02_regression_model.ipynb
+++ b/notebooks/02_regression_model.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1178,7 @@
        "3    1.1425  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1994,26 +1994,28 @@
      "text": [
       "Preview of binned target (using quartiles):\n",
       "Crop_Yield_ton_per_hectare\n",
-      "low     6697\n",
-      "high    1670\n",
+      "Low       4693\n",
+      "Medium    2004\n",
+      "High      1667\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Percentages:\n",
       "Crop_Yield_ton_per_hectare\n",
-      "low     80.0\n",
-      "high    20.0\n",
+      "Low       56.1\n",
+      "Medium    24.0\n",
+      "High      19.9\n",
       "Name: proportion, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "bin_size = 17\n",
+    "bin_size = 10\n",
     "min_val = 0.0\n",
     "max_val = 40\n",
     "\n",
     "bins = np.arange(min_val, max_val, bin_size)\n",
     "#print(bins)\n",
-    "labels = ['low', 'high']\n",
+    "labels = ['Low', 'Medium', 'High']\n",
     "\n",
     "y_binned = pd.cut(y, bins=bins, labels=labels, include_lowest=True) \n",
     "print(\"Preview of binned target (using quartiles):\")\n",
